deployment/4-kubernetes/compiler/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compiler
  namespace: excellentia
  labels:
    app: compiler
spec:
  replicas: 2
  selector:
    matchLabels:
      app: compiler
  template:
    metadata:
      labels:
        app: compiler
    spec:
      containers:
        - name: compiler
          image: ramizouari/excellentia-compiler
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
          volumeMounts:
            - name: runsvolume
              mountPath: "/data/runs"
            - name: testsvolume
              mountPath: "/data/tests"
              readOnly: true
            - name: logsvolume
              mountPath: "/data/logs"
      volumes:
        - name: runsvolume
          persistentVolumeClaim:
            claimName: runs-pvc  
        - name: testsvolume
          persistentVolumeClaim:
            claimName: tests-pvc
        - name: logsvolume
          persistentVolumeClaim:
            claimName: logs-pvc
