deployment/4-kubernetes/compiler/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compiler-service
  namespace: excellentia
  labels:
    app: compiler
spec:
  selector:
      app: compiler
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8085
  type: ClusterIP
